moved encryption secret to a local file